[gd_scene load_steps=12 format=3 uid="uid://52vi3t5dmerl"]

[ext_resource type="PackedScene" uid="uid://d014afww6s6ej" path="res://player.tscn" id="1_hjnuw"]
[ext_resource type="Script" path="res://main.gd" id="1_vbl4s"]
[ext_resource type="PackedScene" uid="uid://b0oiryjxab2ga" path="res://mob.tscn" id="2_s0v0i"]
[ext_resource type="FontFile" uid="uid://be53vcxn8ap80" path="res://fonts/Montserrat-Medium.ttf" id="4_dnyei"]
[ext_resource type="Script" path="res://score-label.gd" id="5_4ndhy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_udhi1"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_8s2m7"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3egil"]
albedo_color = Color(0.898039, 0.509804, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_x5m5a"]
material = SubResource("StandardMaterial3D_3egil")

[sub_resource type="Curve3D" id="Curve3D_w27b0"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -13.995, 0, -15.0171, 0, 0, 0, 0, 0, 0, -14, 0, 15.0098, 0, 0, 0, 0, 0, 0, 14, 0, 15.0557, 0, 0, 0, 0, 0, 0, 14.014, 0, -15.0027, 0, 0, 0, 0, 0, 0, -13.995, 0, -15.0015),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_bj32m"]
default_font = ExtResource("4_dnyei")
default_font_size = 22

[node name="Main" type="Node" node_paths=PackedStringArray("mob_spawn_location")]
script = ExtResource("1_vbl4s")
mob_scene = ExtResource("2_s0v0i")
mob_spawn_location = NodePath("SpawnPath/SpawnLocation")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_udhi1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_8s2m7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_hjnuw")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="Top Left" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, -15)
mesh = SubResource("CylinderMesh_x5m5a")

[node name="Top Right" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -15)
mesh = SubResource("CylinderMesh_x5m5a")

[node name="Bottom Left" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, 15)
mesh = SubResource("CylinderMesh_x5m5a")

[node name="Bottom Right" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 15)
mesh = SubResource("CylinderMesh_x5m5a")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_w27b0")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-1, 0, 0.000166567, 0, 1, 0, -0.000166567, 0, -1, -13.995, 0, -15.0171)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_bj32m")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 28.0
offset_top = 28.0
offset_right = 89.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_4ndhy")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Press enter to retry"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
